Bug 491681 - Some calendar invites are not processed properly
Summary: Some calendar invites are not processed properly
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: VCard file resource (other bugs)
Version First Reported In: 6.1.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-08-13 16:28 UTC by Cyrille Dunant
Modified: 2024-09-13 10:53 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.08.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cyrille Dunant 2024-08-13 16:28:48 UTC
SUMMARY

some calendar invites seem to not be processed correctly, attached is an example
STEPS TO REPRODUCE
get one such invite

OBSERVED RESULT

only the source of the invite is displayed
EXPECTED RESULT
should be parsed as an invite

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20240811
KDE Plasma Version: 6.1.4
KDE Frameworks Version: 6.5.0
Qt Version: 6.7.2

ADDITIONAL INFORMATION

example faulty invite (redacted where appropriate with XXX)

BEGIN:VCALENDAR
METHOD:REQUEST
PRODID:Microsoft Exchange Server 2010
VERSION:2.0
BEGIN:VTIMEZONE
TZID:GMT Standard Time
BEGIN:STANDARD
DTSTART:16010101T020000
TZOFFSETFROM:+0100
TZOFFSETTO:+0000
RRULE:FREQ=YEARLY;INTERVAL=1;BYDAY=-1SU;BYMONTH=10
END:STANDARD
BEGIN:DAYLIGHT
DTSTART:16010101T010000
TZOFFSETFROM:+0000
TZOFFSETTO:+0100
RRULE:FREQ=YEARLY;INTERVAL=1;BYDAY=-1SU;BYMONTH=3
END:DAYLIGHT
END:VTIMEZONE
BEGIN:VEVENT
ORGANIZER;CN=Ian Flewitt:mailto:IFlewitt@pricemyers.com
ATTENDEE;ROLE=REQ-PARTICIPANT;PARTSTAT=NEEDS-ACTION;RSVP=TRUE;CN=XXX:mailto:XXX
ATTENDEE;ROLE=REQ-PARTICIPANT;PARTSTAT=NEEDS-ACTION;RSVP=TRUE;CN=XXX:mailto:XXX
ATTENDEE;ROLE=OPT-PARTICIPANT;PARTSTAT=NEEDS-ACTION;RSVP=TRUE;CN=XXX:mailto:XXX
DESCRIPTION;LANGUAGE=en-GB:\n______________________________________________
 __________________________________\nMicrosoft Teams Need help?<https://aka
 .ms/JoinTeamsMeeting?omkt=en-GB>\nJoin the meeting now<https://teams.micro
 soft.com/l/meetup-join/19%3ameXXXXX\n______________________
 __________\nFor organisers: Meeting options<https://teams.microsoft.com/me
 etingOptions/?organizerId=7d07d87d-9b68-4fcf-95b2-fdd0821834e1&tenantId=bd
 f41ef7-6892-4022-ab29-abca8954c6b9&threadId=19_meeXXX2&messageId=0&language=en-GB>\n_____
 __________________________________________________________________________
 _\n\n
RRULE:FREQ=WEEKLY;UNTIL=20241217T130000Z;INTERVAL=2;BYDAY=TU;WKST=MO
UID:040000008200E00074C5B7101A82E0080000000040B5DB4387D7DA01000000000000000
 010000000499D918091722745A8BC559434F0C434
SUMMARY;LANGUAGE=en-GB:Panda Meeting
DTSTART;TZID=GMT Standard Time:20240813T130000
DTEND;TZID=GMT Standard Time:20240813T140000
CLASS:PUBLIC
PRIORITY:5
DTSTAMP:20240813T130736Z
TRANSP:OPAQUE
STATUS:CONFIRMED
SEQUENCE:3
LOCATION;LANGUAGE=en-GB:Microsoft Teams Meeting
X-MICROSOFT-CDO-APPT-SEQUENCE:3
X-MICROSOFT-CDO-OWNERAPPTID:-1603242008
X-MICROSOFT-CDO-BUSYSTATUS:TENTATIVE
X-MICROSOFT-CDO-INTENDEDSTATUS:BUSY
X-MICROSOFT-CDO-ALLDAYEVENT:FALSE
X-MICROSOFT-CDO-IMPORTANCE:1
X-MICROSOFT-CDO-INSTTYPE:1
X-MICROSOFT-ONLINEMEETINGINFORMATION:{"OnlineMeetingChannelId":null\,"Onlin
 eMeetingProvider":3}
X-MICROSOFT-SKYPETEAMSMEETINGURL:https://teams.microsoft.com/l/meetup-join/XXXXXX
X-MICROSOFT-SCHEDULINGSERVICEUPDATEURL:https://api.scheduler.teams.microsof
 t.com/teams/bdf41ef7-6892-4022-ab29-abca8954c6b9/7d07d87d-9b68-4fcf-95b2-f
 dd0821834e1/19_meeting_ZjFjMWM0MzQtNTg3Ni00YWVmLThmZWItNTVhNzVkMmFkYjVl@th
 read.v2/0
X-MICROSOFT-SKYPETEAMSPROPERTIES:{"cid":"19:meeting_ZjFjMWM0MzQtNTg3Ni00YWV
 mLThmZWItNTVhNzVkMmFkYjVl@thread.v2"\,"private":true\,"type":0\,"mid":0\,"
 rid":0\,"uid":null}
X-MICROSOFT-DONOTFORWARDMEETING:FALSE
X-MICROSOFT-DISALLOW-COUNTER:FALSE
X-MICROSOFT-REQUESTEDATTENDANCEMODE:DEFAULT
X-MICROSOFT-ISRESPONSEREQUESTED:TRUE
X-MICROSOFT-LOCATIONS:[ { "DisplayName" : "Microsoft Teams Meeting"\, "Loca
 tionAnnotation" : ""\, "LocationSource" : 0\, "Unresolved" : false\, "Loca
 tionUri" : "" } ]
BEGIN:VALARM
DESCRIPTION:REMINDER
TRIGGER;RELATED=START:-PT15M
ACTION:DISPLAY
END:VALARM
END:VEVENT
BEGIN:VEVENT
UID:040000008200E00074C5B7101A82E0080000000040B5DB4387D7DA01000000000000000
 010000000499D918091722745A8BC559434F0C434
END:VEVENT
Comment 1 Bug Janitor Service 2024-09-13 10:22:18 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/kdepim-runtime/-/merge_requests/183
Comment 2 Daniel Vrátil 2024-09-13 10:53:03 UTC
Git commit 2c4d702e630e832237f02b762890ca8ed03bd08c by Daniel Vrátil.
Committed on 13/09/2024 at 10:21.
Pushed by dvratil into branch 'release/24.08'.

Attempt to workaround EWS servers sometimes returning broken iCal

Apparently it's a known issue that some versions of EWS (including Outlook365)
in some situations return an invalid iCal that is missing the closing
END:VCALENDAR entry. This causes the event to be missing at best or to
crash the EWS code at worst.

This workaround simply checks for presence of END:VCALENDAR in the response
and if it's missing it will simply append it to the end.
Related: bug 492120
FIXED-IN: 24.08.2

M  +22   -2    resources/ews/calendar/ewsfetchcalendardetailjob.cpp

https://invent.kde.org/pim/kdepim-runtime/-/commit/2c4d702e630e832237f02b762890ca8ed03bd08c